Terraform/Eks/02-Networking.tf
# VPC
#################################################

resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "eks-vpc"
  }
}

#################################################
# INTERNET GATEWAY
#################################################

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "eks-igw"
  }
}

#################################################
# PUBLIC SUBNETS (ALB + NAT)
#################################################

resource "aws_subnet" "public_1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = true


}

resource "aws_subnet" "public_2" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "ap-south-1b"
  map_public_ip_on_launch = true


}

resource "aws_subnet" "public_3" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.3.0/24"
  availability_zone       = "ap-south-1b"
  map_public_ip_on_launch = true


}
resource "aws_subnet" "public_4" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.4.0/24"
  availability_zone       = "ap-south-1b"
  map_public_ip_on_launch = true


}


#################################################
# EKS CONTROL PLANE SUBNETS
#################################################

resource "aws_subnet" "eks_control_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.11.0/24"
  availability_zone = "ap-south-1a"

  tags = {
    Name = "eks-control-1"
  }
}

resource "aws_subnet" "eks_control_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.12.0/24"
  availability_zone = "ap-south-1b"

  tags = {
    Name = "eks-control-2"
  }
}

#################################################
# WORKER NODE SUBNETS
#################################################

resource "aws_subnet" "worker_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.21.0/24"
  availability_zone = "ap-south-1a"

  tags = {
    Name                              = "worker-1"
    "kubernetes.io/role/internal-elb" = "1"
    "kubernetes.io/cluster/demo-eks"  = "shared"
  }
}

resource "aws_subnet" "worker_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.22.0/24"
  availability_zone = "ap-south-1b"

  tags = {
    Name                              = "worker-2"
    "kubernetes.io/role/internal-elb" = "1"
    "kubernetes.io/cluster/demo-eks"  = "shared"
  }
}

#################################################
# DB SUBNETS
#################################################

resource "aws_subnet" "db_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.31.0/24"
  availability_zone = "ap-south-1a"

  tags = {
    Name = "db-1"
  }
}

resource "aws_subnet" "db_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.32.0/24"
  availability_zone = "ap-south-1b"

  tags = {
    Name = "db-2"
  }
}

#################################################
# PUBLIC ROUTE TABLE
#################################################

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "public-rt"
  }
}

resource "aws_route_table_association" "public_1" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_2" {
  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.public.id
}

#################################################
# ELASTIC IP
#################################################

resource "aws_eip" "nat" {
  domain = "vpc"

  tags = {
    Name = "nat-eip"
  }
}

#################################################
# NAT GATEWAY
#################################################

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_1.id

  tags = {
    Name = "eks-nat"
  }

  depends_on = [
    aws_internet_gateway.igw
  ]
}

#################################################
# PRIVATE ROUTE TABLE
#################################################

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name = "private-rt"
  }
}

#################################################
# PRIVATE ROUTE TABLE ASSOCIATIONS
#################################################

resource "aws_route_table_association" "eks_control_1" {
  subnet_id      = aws_subnet.eks_control_1.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "eks_control_2" {
  subnet_id      = aws_subnet.eks_control_2.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "worker_1" {
  subnet_id      = aws_subnet.worker_1.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "worker_2" {
  subnet_id      = aws_subnet.worker_2.id
  route_table_id = aws_route_table.private.id
}

#################################################
# DB ROUTE TABLE
#################################################

resource "aws_route_table" "db" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "db-rt"
  }
}

resource "aws_route_table_association" "db_1" {
  subnet_id      = aws_subnet.db_1.id
  route_table_id = aws_route_table.db.id
}

resource "aws_route_table_association" "db_2" {
  subnet_id      = aws_subnet.db_2.id
  route_table_id = aws_route_table.db.id
}
